unpackaged/main/default/objects/sked_Travel_Time_Breakdown__c/fields/sked_Start_of_Window__c.field-meta.xml
<CustomField>
    <fullName>sked_Start_of_Window__c</fullName>
    <label>Start of Window</label>
    <type>Time</type>
</CustomField>