unpackaged/main/default/objects/sked_Travel_Time_Breakdown__c/fields/sked_Travel_Distance__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Distance__c</fullName>
    <label>Travel Distance (mi)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>